syntax = "proto3";

import "nanopb.proto";
import "proto/BasicTypes.proto";

message UInt32Value {
    uint32 value = 1;
}

message HederaAccountAmount {
    HederaAccountID accountID = 1;
    sint64 amount = 2;
}

message HederaTransferList {
    repeated HederaAccountAmount accountAmounts = 1 [(nanopb).max_count = 2];
}

message HederaTokenTransferList {
    HederaTokenID token = 1;

    repeated HederaAccountAmount transfers = 2 [(nanopb).max_count = 2];

    /**
     * If present, the number of decimals this fungible token type is expected to have. The transfer
     * will fail with UNEXPECTED_TOKEN_DECIMALS if the actual decimals differ.
     */
    UInt32Value expected_decimals = 4;
}

message HederaCryptoTransferTransactionBody {
    HederaTransferList transfers = 1;
    
    repeated HederaTokenTransferList tokenTransfers = 2 [(nanopb).max_count = 1];
}
